Alert component start

--- a/Blazor101/src/BlazorWasmApp/Client/Pages/Index.razor
+++ b/Blazor101/src/BlazorWasmApp/Client/Pages/Index.razor
@@ -1,7 +1,9 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1>Example 1</h1>
 
-Welcome to your new app.
+<h2>Single Alert Message</h2>
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+<div class="alert alert-danger">
+    <span>I'm an alert!</span>
+</div>
