Alert component end

--- a/Blazor101/src/BlazorWasmApp/Client/Pages/Index.razor
+++ b/Blazor101/src/BlazorWasmApp/Client/Pages/Index.razor
@@ -4,6 +4,6 @@
 
 <h2>Single Alert Message</h2>
 
-<div class="alert alert-danger">
-    <span>I'm an alert!</span>
-</div>
+<AlertMessage>
+    <span>I'm a component alert!</span>
+</AlertMessage>
