--- a/Blazor101/src/BlazorWasmApp/Client/_Imports.razor
+++ b/Blazor101/src/BlazorWasmApp/Client/_Imports.razor
@@ -9,3 +9,4 @@
 @using BlazorWasmApp.Client
 @using BlazorWasmApp.Client.Shared
 @using BlazorWasmApp.Client.Components
+@using BlazorWasmApp.Client.Helpers
